objects/UPC_Opportunity_Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>UPC_Account__c</fullName>
        <formula>UPC_Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact_Name__c</fullName>
        <description>Created by Nexell to be used on the Opp Contact Role related list.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, UPC_Contact__r.FirstName&amp;&apos; &apos;&amp; UPC_Contact__r.LastName, &quot;_self&quot; )</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Contact Roles</relationshipLabel>
        <relationshipName>Opportunity_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Contact Roles</relationshipLabel>
        <relationshipName>Opportunity_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UPC_Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Main Commercial Contact</fullName>
                </value>
                <value>
                    <fullName>Main Technical Contact</fullName>
                </value>
                <value>
                    <fullName>Installation Contact</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mobile Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Contact Role</label>
    <nameField>
        <displayFormat>OCR-{0000}</displayFormat>
        <label>UPC Opportunity Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>